crates/forge-tui/tests/snapshots/render_snapshots__app_with_session_list_renders.snap
---
source: crates/forge-tui/tests/render_snapshots.rs
expression: buffer_to_string(&buffer)
---
┌ Sessions [active] ───────┐┌ Conversation ────────────────────────────────────┐
│First session             ││                                                  │
│Second session            ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────┘
- no session  |  q quit
