crates/forge-tui/tests/snapshots/render_snapshots__app_with_two_messages_renders.snap
---
source: crates/forge-tui/tests/render_snapshots.rs
assertion_line: 37
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "┌ Sessions ────────────────┐┌ Conversation — sess_demo ────────────────────────┐",
        "│                          ││[U] hello                                         │",
        "│                          ││[A] hi back                                       │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "│                          ││                                                  │",
        "└──────────────────────────┘└──────────────────────────────────────────────────┘",
        "- no session  |  q quit                                                         ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
