crates/forge-tui/tests/snapshots/render_snapshots__empty_app_renders.snap
---
source: crates/forge-tui/tests/render_snapshots.rs
expression: buffer_to_string(&buffer)
---
┌ Sessions [active] ───────┐┌ Conversation ────────────────────────────────────┐
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────┘
- no session  |  q quit
